[package]
name = "ChainKit"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "2.0" # Solana transactions and keypairs
solana-client = "2.0" # RPC client
ring = "0.17" # Encryption for USB keys
clap = { version = "4.5", features = ["derive"] } # CLI parsing
serde = { version = "1.0", features = ["derive"] } # Serialization
serde_json = "1.0" # JSON handling
tokio = { version = "1.40", features = ["full"] } # Async runtime